# wolproxypyweb

./: .env-template  .flaskenv  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  Makefile  README.md  api.env  docker-compose.yml  entrypoint.sh  flask-migrate-init.sh  flask-migrate.sh  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: CI_CD.yml  codeql.yml
config/: __init__.py  config.py  db.config  logging.config
docs/: about.md  index.md  web.md
migrations/: env.py
tests/web/: test_wolproxypyweb.py
wolproxypyweb/: __init__.py  forms.py  routes.py
wolproxypyweb/admin/: __init__.py  forms.py  routes.py
wolproxypyweb/auth/: __init__.py  forms.py  routes.py
wolproxypyweb/database/: __init__.py  models.py  {db_config['database']['name']}
wolproxypyweb/errors/: __init__.py  handlers.py
wolproxypyweb/main/: __init__.py  forms.py  routes.py
wolproxypyweb/static/css/: content.css  sidebar.css  style copy.css  style.css
wolproxypyweb/static/js/: content.js  navbar.js  scripts.js
wolproxypyweb/templates/: _addhost.html  _edithost.html  about.html  base.html  host.html  index.html  login.html  sidebar-base.html  user.html
wolproxypyweb/templates/admin/: _users.html  admin.html  api.html  general.html  sso.html  users.html
wolproxypyweb/templates/auth/: login.html  register.html
wolproxypyweb/templates/email/: reset_password.html  reset_password.txt
wolproxypyweb/templates/errors/: 403.html  404.html  500.html
wolproxypyweb/templates/macros/: sidebar.html
