[tool.poetry]
name = "wolproxypyweb"
version = "0.1.2"
description = "A Flask, responsive web app for routing Wake-On-LAN packets via Internet"
authors = ["Fabio Calefato <fabio.calefato@uniba.it>"]
license = "MIT"
include = [
    "LICENSE",
]

[tool.poetry.scripts]
wolproxypyweb = "main:run"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^60.0.4"
pretty-errors = "^1.2.25"
rich = "^13.7.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
gunicorn = "^21.2.0"
Flask = "^3.0.2"
Flask-Login = "^0.6.3"
Flask-WTF = "^1.2.1"
Flask-Bootstrap = "^3.3.7.1"
SQLAlchemy = "^2.0.25"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^4.0.5"
oauthlib = "^3.2.2"
pyOpenSSL = "^24.0.0"
requests = "^2.31.0"
email-validator = "^2.1.0"
python-dotenv = "^1.0.1"
poetry-dotenv-plugin = "^0.2.0"
EasySettings = "^4.0.1"

[tool.poetry.dev-dependencies]
isort = "^5.13.2"
flake8 = "^4.0.1"
black = "^21.12b0"
pylint = "^2.12.2"
mypy = "^0.920"
bandit = "^1.7.1"
autopep8 = "^1.6.0"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pydocstyle = "^6.1.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"
mkdocs-autorefs = "^0.5.0"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=60.0.4"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true

[tool.bandit]
skips = ["B104","B610","B611","B702","B703"]

[tool.pydocstyle]
ignore = "D104,D203,D213,D406,D407,D413"
